--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,8 +1,3 @@
 @import "_mixins/font-face"
-
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoCondensedBold/RobotoCondensedBold")
-+font-face("roboto-example", "../fonts/RobotoCondensedLight/RobotoCondensedLight")
-+font-face("roboto-example", "../fonts/RobotoCondensedRegular/RobotoCondensedRegular")
-+font-face("roboto-example", "../fonts/RobotoCondensedRegular/RobotoCondensedRegular")
-+font-face("roboto-example", "../fonts/RobotoLight/RobotoLightRobotoLightRobotoCondensedLigh")
++font-face("DINNextLTPro-MediumCond", "../fonts/DINNextLTPro-MediumCond/DINNextLTPro-MediumCond")
++font-face("RobotoLight", "../fonts/RobotoLight/RobotoLight")
