--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,12 +38,8 @@ html, body
 	height: 100%
 
 body
-	font-size: 16px
-	min-width: 320px
-	position: relative
-	line-height: 1.65
-	font-family: $default-font
-	overflow-x: hidden
+	margin: 0
+	font-family: "DINNextLTPro-MediumCond"
 
 .img-responsive
 	display: block
@@ -56,5 +52,579 @@ body
 ::selection
 	background-color: $accent
 	color: #fff
+
+
+
+
+
+
+
+
+/*
+//
+// NAVIGATION
+//
+*box-sizing:border-box
+.navigation
+	position: fixed
+	width: 100%
+
+.container-content
+  max-width: 1280px
+  margin: 0px auto
+
+
+.navigation-content
+	display: flex
+	justify-content: space-between
+	background-color: white
+	padding: 20px 0px 20px 0px
+
+.navigation-content-left
+	display: flex
+	align-items: center
+
+#label
+  background-image: url("../img/label.png")
+  width: 50px
+  height: 50px
+
+#label
+	margin-left: 20px
+
+.menu
+  list-style: none
+  margin: 0
+
+
+li:nth-child(1)
+	padding-left: 30px
+li:nth-child(2)
+	padding-left: 40px
+li:nth-child(3)
+	padding-left: 40px
+li:nth-child(4)
+	padding-left: 40px
+li:nth-child(5)
+	padding-left: 40px
+
+.menu li
+  display: inline-block
+
+
+.menu a
+  font-size: 14px
+  text-decoration: none
+  text-transform: uppercase
+  color: black
+
+.menu a:hover
+  color: #2299d5
+
+
+.navigation-content-right
+	display: flex
+	align-items: center
+	padding-top: 2px
+
+form
+  position: relative
+  width: 300px
+  margin: 0 auto
+  height: 42px
+
+input
+  height: 42px
+  width: 0
+  padding: 0 42px 0 15px
+  border: none
+  border-bottom: 2px solid transparent
+  outline: none
+  background: transparent
+  transition: .4s cubic-bezier(0, 0.8, 0, 1)
+  position: absolute
+  top: 0
+  right: 0
+  z-index: 2
+
+input:focus
+  width: 300px
+  z-index: 1
+  border-bottom: 2px solid #F9F0DA
+
+button
+  position: absolute
+  top: 0
+  right: 0
+  cursor: pointer
+
+
+button:before
+  content: "\f002"
+  font-family: FontAwesome
+  font-size: 16px
+  color: #F9F0DA
+
+
+
+
+
+
+#shopping-cart-button
+	background-image: url("../img/shopping.jpg")
+	width: 18px
+	height: 19px
+	font-size: 14px
+	background-repeat: no-repeat
+	text-transform: uppercase
+	padding: 0px 73px 0px 25px
+	cursor: pointer
+
+#shopping-cart
+	width: 600px
+	height: 300px
+	margin: 40px auto
+	background: #fff
+	box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10)
+	border-radius: 6px
+	display: flex
+	flex-direction: column
+
+.title
+	height: 60px
+	border-bottom: 1px solid #E1E8EE
+	padding: 20px 30px
+	color: #5E6977
+	font-size: 18px
+
+.item
+	padding: 20px 30px
+	height: 120px
+	display: flex
+
+.buttons
+	position: relative
+	padding-top: 30px
+	margin-right: 60px
+
+.delete-btn, .like-btn
+	display: inline-block
+	cursor: pointer
+
+.delete-btn
+	width: 18px
+	height: 17px
+	background-image: url("../img/close.png")
+
+.like-btn
+	position: absolute
+	top: 9px
+	left: 15px
+	background-image: url("https://cssanimation.rocks/images/posts/steps/heart.png")
+	width: 60px
+	height: 60px
+	background-size: 2900%
+	background-repeat: no-repeat
+
+.is-active
+  animation-name: animate
+  animation-duration: .8s
+  animation-iteration-count: 1
+  animation-timing-function: steps(28)
+  animation-fill-mode: forwards
+
+
+@keyframes animate
+  0%   { background-position: left;  }
+  50%  { background-position: right; }
+  100% { background-position: right; }
+
+.image-product:nth-child(1)
+	background-image: url("../img/color.jpg")
+
+.image-product:nth-child(2)
+	background-image: url("../img/gray-color.jpg")
+
+.image-product
+	width: 80px
+	height: 80px
+	margin-right: 50px
+
+.description-cart span
+	display: block
+	font-size: 14px
+	color: #43484D
+
+.description-cart span:first-child
+	margin-bottom: 5px
+
+.description-cart span:last-child
+	font-weight: 300
+	margin-top: 8px
+	color: #86939E
+
+.quantity
+	padding-top: 20px
+	margin-right: 60px
+
+.quantity input
+	border: none
+	text-align: center
+	width: 32px
+	font-size: 18px
+	color: #43484D
+
+button[class*=btn]
+	width: 30px
+	height: 30px
+	background-color: #E1E8EE
+	border-radius: 6px
+	border: none
+	cursor: pointer
+	background-position: center
+	outline: none
+
+.minus-btn
+	background-image: url("../img/minus.png")
+	width: 50px
+	height: 50px
+	margin-bottom: 3px
+
+.plus-btn
+	background-image: url("../img/plus.png")
+	width: 24px
+	height: 24px
+	margin-top: 2px
+
+.button:focus, input:focus
+	outline: 0
+
+.total-price
+	width: 83px
+	padding-top: 27px
+	text-align: center
+	font-size: 18px
+	color: #43484D
+	font-weight: 300
+
+
+
+
+.sing
+	background-image: url("../img/sing.jpg")
+	width: 17px
+	height: 19px
+	font-size: 14px
+	background-repeat: no-repeat
+	text-transform: uppercase
+	padding: 0px 64px 0px 24px
+	cursor: pointer
+
+
+	/*
+	//
+	// FOOTWEAR_MAIN
+	//
+
+
+.footwear-main-content
+	display: flex
+	align-items: flex-end
+	background-color: white
+	padding: 78px 0px 150px
+
+.footwear-image-content
+	background-image: url("../img/footwear.jpg")
+	width: 638px
+	height: 296px
+	margin-left: 120px
+
+.footwear-product-content
+	margin-left: 92px
+
+.product-like
+	z-index: 3
+	background-image: url("../img/like.jpg")
+	width: 50px
+	height: 50px
+	margin-bottom: 39px
+
+.product-name-nike
+	font-size: 25px
+	text-transform: uppercase
+
+.product-name-air
+	font-size: 35px
+	text-transform: uppercase
+
+.product-price
+	font-size: 18px
+	margin-bottom: 19px
+
+.product-colors
+	font-size: 14px
+	text-transform: uppercase
+	margin-bottom: 12px
+
+span
+  color: #0089cf
+
+.product-color-selection-image
+	display: flex
+	margin-bottom: 16px
+
+.color-selection-image
+	background-image: url("../img/color.jpg")
+	width: 80px
+	height: 80px
+
+.gray-seliction-image
+	background-image: url("../img/gray-color.jpg")
+	width: 80px
+	height: 80px
+	margin-left: 10px
+
+.product-size
+	font-family: "RobotoLight"
+	font-size: 12px
+	color: #adadad
+	margin-bottom: 10px
+
+.product-size-charts
+	display: flex
+
+.product-size-selection
+	width: 125px
+	height: 50px
+	outline: none
+
+.product-cart
+	width: 125px
+	height: 50px
+	background-color: #333
+	color: white
+	text-align: center
+	line-height: 54px
+	text-transform: uppercase
+	font-size: 14px
+	margin-left: 11px
+	cursor: pointer
+
+/*
+//
+// DESCRIPTION
+//
+
+.description-content
+	background-image: url("../img/desc.jpg")
+	width: 100%
+	max-width: 1280px
+	height: 660px
+	background-size: cover
+	background-position: center
+
+.description-information-content
+	padding: 258px 860px 0px 52px
+
+.description-information-title
+	font-size: 25px
+	text-transform: uppercase
+	color: white
+	padding-bottom: 13px
+
+.description-information-text
+	font-size: 14px
+	color: white
+	font-family: "RobotoLight"
+	line-height: 1.8
+
+/*
+//
+// PRODUCT-DESCRIPtION
+//
+
+.product-story-description-content
+	background-color: #f5f5f5
+
+.product-story-description-content
+	display: flex
+	background-image: url("../img/pair shoes.png")
+	width: 100%
+	max-width: 1280px
+	height: 660px
+	background-size: cover
+	background-position: center
+
+.product-story-content
+	padding: 106px 0px 0px 51px
+
+.story-content
+	margin-bottom: 40px
+
+.product-story-title-content
+	font-size: 14px
+	text-transform: uppercase
+	color: #666
+	margin-bottom: 2px
+
+.product-story-name-content
+	font-size: 25px
+	text-transform: uppercase
+	margin-bottom: 13px
+
+.product-story-text-content
+	font-family: "RobotoLight"
+	font-size: 14px
+	padding-right: 531px
+	color: #b2b2b2
+	line-height: 1.8
+
+.product-benefits-content
+	font-size: 14px
+	text-transform: uppercase
+	color: #666
+	margin-bottom: 21px
+
+.product-benefits-texttile-content, .product-benefits-Injected-content, .product-benefits-color-content, .product-benefits-rubber-content
+	font-size: 18px
+	text-transform: uppercase
+	color: #333
+	line-height: 1.3
+
+.product-benefits-texttile-text-content, .product-benefits-injected-text-content, .product-benefits-color-text-content, .product-benefits-rubber-text-content
+	font-family: "RobotoLight"
+	font-size: 12px
+	color: #676767
+	margin-bottom: 16px
+
+.product-description-content
+	background-color: #fff
+	width: 580px
+	height: 430px
+	border: 3px solid #e4e4e4
+	margin: 115px 50px 0px 0px
+
+.product-description-name-nike
+	font-size: 25px
+	text-transform: uppercase
+	color: #333
+	padding: 16px 0px 1px 25px
+
+.product-description-name-air
+	font-family: "RobotoLight"
+	font-size: 14px
+	color: #666
+	padding: 0px 0px 14px 25px
+
+
+.product-description-colors
+	font-size: 14px
+	text-transform: uppercase
+	color: #0089cf
+	padding: 0px 0px 45px 25px
+
+.product-description-image
+	background-image: url("../img/nike-description.jpg")
+	width: 263px
+	height: 122px
+	margin: 0px 0px 48px 17px
+
+.product-description-quantity-price
+	display: flex
+	justify-content: space-between
+	align-items: center
+	padding-bottom: 13px
+
+.product-description-quantity
+	font-size: 14px
+	text-transform: uppercase
+	padding-left: 25px
+
+.product-description-price
+	font-size: 18px
+	padding-right: 25px
+
+.product-description-charts
+	display: flex
+	justify-content: space-between
+	padding-left: 25px
+
+.product-description-selection
+	width: 115px
+	height: 50px
+	outline: none
+
+.product-description-cart
+	width: 115px
+	height: 50px
+	background-color: #333
+	color: #e4e4e4
+	text-transform: uppercase
+	font-size: 14px
+	margin-right: 25px
+	line-height: 56px
+	text-align: center
+	cursor: pointer
+
+/*
+//
+// FOOTWEAR-SOCIAL
+//
+
+
+.footwear-social-content
+	background-color: #fff
+	padding: 106px 0px 200px 0px
+
+.social-nikeairmax-content
+	margin: 0px 0px 30px 50px
+
+.social-content
+	font-size: 14px
+	color: #666
+	text-transform: uppercase
+	margin-bottom: 2px
+
+.social-nikeairmax-content a
+	font-size: 25px
+	color: #333
+	text-transform: uppercase
+	text-decoration: none
+
+.images-container
+	display: flex
+	flex-wrap: wrap
+	justify-content: space-around
+	margin-left: 35px
+
+.image-container
+  width: 25%
+  border: 6.5px solid transparent
+
+.models-image
+	opacity: 0.2
+
+.models-image:hover
+	opacity: 1
+
+
+.image-container:nth-child(1) .models-image
+  background-image: url("../img/nike1.jpg")
+
+
+.image-container:nth-child(2) .models-image
+  background-image: url("../img/nike2.jpg")
+
+.image-container:nth-child(3) .models-image
+  background-image: url("../img/nike3.jpg")
+
+.image-container:nth-child(4) .models-image
+  background-image: url("../img/nike4.jpg")
+
+.image-container .models-image
+	width: 280px
+	height: 280px
+
+
 
 @import "media" // Всегда в конце
