--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -111,6 +111,8 @@ li:nth-child(5)
 .menu li
   display: inline-block
 
+.menu a
+	position: relative
 
 .menu a
   font-size: 14px
@@ -121,11 +123,26 @@ li:nth-child(5)
 .menu a:hover
   color: #2299d5
 
+.menu a::after
+	display: block
+	content: ""
+	border-bottom: 5px solid
+
 
 .navigation-content-right
 	display: flex
 	align-items: center
-	padding-top: 2px
+
+
+.search
+	background-image: url("../img/search.jpg")
+	background-repeat: no-repeat
+	width: 19px
+	height: 19px
+	font-size: 14px
+	text-transform: uppercase
+	padding: 0px 65px 0px 25px
+	cursor: pointer
 
 form
   position: relative
@@ -331,11 +348,13 @@ button[class*=btn]
 	display: flex
 	align-items: flex-end
 	background-color: white
-	padding: 78px 0px 150px
+	padding: 98px 0px 150px
 
 .footwear-image-content
 	background-image: url("../img/footwear.jpg")
-	width: 638px
+	background-size: cover
+	max-width: 638px
+	width: 100%
 	height: 296px
 	margin-left: 120px
 
@@ -393,7 +412,7 @@ span
 .product-size-charts
 	display: flex
 
-.product-size-selection
+#product-size-selection
 	width: 125px
 	height: 50px
 	outline: none
@@ -443,7 +462,7 @@ span
 // PRODUCT-DESCRIPtION
 //
 
-.product-story-description-content
+.product-description
 	background-color: #f5f5f5
 
 .product-story-description-content
@@ -622,9 +641,49 @@ span
   background-image: url("../img/nike4.jpg")
 
 .image-container .models-image
-	width: 280px
+	width: 100%
 	height: 280px
+	padding-top: 100%
+	background-size: cover
+
+
+@media screen and (max-width:1300px)
+	.product-description-content
+		margin: 115px 0px 0 0
+
+@media screen and (max-width:1150px)
+	.description-information-content
+		padding: 258px 600px 0 52px
+
+@media screen and (max-width:992px)
+	.description-information-content
+		padding: 258px 450px 0 52px
+
+	.image-container
+		width: 50%
+
+@media screen and (max-width:768px)
+	.description-information-content
+		padding: 258px 300px 0 52px
+
+	.image-container
+		width: 100%
+
+@media screen and (max-width:600px)
+	.description-information-content
+		padding: 258px 100px 0 100px
+
+@media screen and (max-width: 411px)
+	.description-information-content
+		padding: 258px 10px 0 80px
+
+@media screen and (max-width:320px)
+	.description-information-content
+		padding: 258px 10px 0 70px
 
 
 
-@import "media" // Всегда в конце
+
+
+
+@import "media"
