--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,17 +41,7 @@ body
 	margin: 0
 	font-family: "DINNextLTPro-MediumCond"
 
-.img-responsive
-	display: block
-	max-width: 100%
-	height: auto
 
-.text-center
-	text-align: center
-
-::selection
-	background-color: $accent
-	color: #fff
 
 
 
@@ -65,9 +55,10 @@ body
 // NAVIGATION
 //
 *box-sizing:border-box
+
 .navigation
-	position: fixed
 	width: 100%
+	position: fixed
 
 .container-content
   max-width: 1280px
@@ -112,21 +103,20 @@ li:nth-child(5)
   display: inline-block
 
 .menu a
-	position: relative
-
-.menu a
   font-size: 14px
   text-decoration: none
   text-transform: uppercase
   color: black
 
+
 .menu a:hover
   color: #2299d5
 
-.menu a::after
+.menu a:hover::after
 	display: block
 	content: ""
 	border-bottom: 5px solid
+
 
 
 .navigation-content-right
@@ -346,20 +336,21 @@ button[class*=btn]
 
 .footwear-main-content
 	display: flex
+	justify-content: space-between
 	align-items: flex-end
 	background-color: white
 	padding: 98px 0px 150px
 
 .footwear-image-content
 	background-image: url("../img/footwear.jpg")
-	background-size: cover
 	max-width: 638px
 	width: 100%
 	height: 296px
-	margin-left: 120px
+	margin-left: 130px
+	background-size: cover
 
 .footwear-product-content
-	margin-left: 92px
+	margin-right: 165px
 
 .product-like
 	z-index: 3
@@ -416,6 +407,7 @@ span
 	width: 125px
 	height: 50px
 	outline: none
+
 
 .product-cart
 	width: 125px
@@ -680,7 +672,6 @@ span
 @media screen and (max-width:320px)
 	.description-information-content
 		padding: 258px 10px 0 70px
-
 
 
 
