--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -75,29 +75,29 @@ body
 	display: flex
 	align-items: center
 
-#label
+.label
   background-image: url("../img/label.png")
   width: 50px
   height: 50px
 
-#label
+.label
 	margin-left: 20px
+
+.label
+	cursor: pointer
 
 .menu
   list-style: none
   margin: 0
 
-
-li:nth-child(1)
-	padding-left: 30px
 li:nth-child(2)
-	padding-left: 40px
+	padding-left: 30px
 li:nth-child(3)
-	padding-left: 40px
+	padding-left: 30px
 li:nth-child(4)
-	padding-left: 40px
+	padding-left: 30px
 li:nth-child(5)
-	padding-left: 40px
+	padding-left: 30px
 
 .menu li
   display: inline-block
@@ -124,7 +124,7 @@ li:nth-child(5)
 	align-items: center
 
 
-.search
+#search
 	background-image: url("../img/search.jpg")
 	background-repeat: no-repeat
 	width: 19px
@@ -133,49 +133,6 @@ li:nth-child(5)
 	text-transform: uppercase
 	padding: 0px 65px 0px 25px
 	cursor: pointer
-
-form
-  position: relative
-  width: 300px
-  margin: 0 auto
-  height: 42px
-
-input
-  height: 42px
-  width: 0
-  padding: 0 42px 0 15px
-  border: none
-  border-bottom: 2px solid transparent
-  outline: none
-  background: transparent
-  transition: .4s cubic-bezier(0, 0.8, 0, 1)
-  position: absolute
-  top: 0
-  right: 0
-  z-index: 2
-
-input:focus
-  width: 300px
-  z-index: 1
-  border-bottom: 2px solid #F9F0DA
-
-button
-  position: absolute
-  top: 0
-  right: 0
-  cursor: pointer
-
-
-button:before
-  content: "\f002"
-  font-family: FontAwesome
-  font-size: 16px
-  color: #F9F0DA
-
-
-
-
-
 
 #shopping-cart-button
 	background-image: url("../img/shopping.jpg")
@@ -187,137 +144,7 @@ button:before
 	padding: 0px 73px 0px 25px
 	cursor: pointer
 
-#shopping-cart
-	width: 600px
-	height: 300px
-	margin: 40px auto
-	background: #fff
-	box-shadow: 1px 2px 3px 0px rgba(0,0,0,0.10)
-	border-radius: 6px
-	display: flex
-	flex-direction: column
-
-.title
-	height: 60px
-	border-bottom: 1px solid #E1E8EE
-	padding: 20px 30px
-	color: #5E6977
-	font-size: 18px
-
-.item
-	padding: 20px 30px
-	height: 120px
-	display: flex
-
-.buttons
-	position: relative
-	padding-top: 30px
-	margin-right: 60px
-
-.delete-btn, .like-btn
-	display: inline-block
-	cursor: pointer
-
-.delete-btn
-	width: 18px
-	height: 17px
-	background-image: url("../img/close.png")
-
-.like-btn
-	position: absolute
-	top: 9px
-	left: 15px
-	background-image: url("https://cssanimation.rocks/images/posts/steps/heart.png")
-	width: 60px
-	height: 60px
-	background-size: 2900%
-	background-repeat: no-repeat
-
-.is-active
-  animation-name: animate
-  animation-duration: .8s
-  animation-iteration-count: 1
-  animation-timing-function: steps(28)
-  animation-fill-mode: forwards
-
-
-@keyframes animate
-  0%   { background-position: left;  }
-  50%  { background-position: right; }
-  100% { background-position: right; }
-
-.image-product:nth-child(1)
-	background-image: url("../img/color.jpg")
-
-.image-product:nth-child(2)
-	background-image: url("../img/gray-color.jpg")
-
-.image-product
-	width: 80px
-	height: 80px
-	margin-right: 50px
-
-.description-cart span
-	display: block
-	font-size: 14px
-	color: #43484D
-
-.description-cart span:first-child
-	margin-bottom: 5px
-
-.description-cart span:last-child
-	font-weight: 300
-	margin-top: 8px
-	color: #86939E
-
-.quantity
-	padding-top: 20px
-	margin-right: 60px
-
-.quantity input
-	border: none
-	text-align: center
-	width: 32px
-	font-size: 18px
-	color: #43484D
-
-button[class*=btn]
-	width: 30px
-	height: 30px
-	background-color: #E1E8EE
-	border-radius: 6px
-	border: none
-	cursor: pointer
-	background-position: center
-	outline: none
-
-.minus-btn
-	background-image: url("../img/minus.png")
-	width: 50px
-	height: 50px
-	margin-bottom: 3px
-
-.plus-btn
-	background-image: url("../img/plus.png")
-	width: 24px
-	height: 24px
-	margin-top: 2px
-
-.button:focus, input:focus
-	outline: 0
-
-.total-price
-	width: 83px
-	padding-top: 27px
-	text-align: center
-	font-size: 18px
-	color: #43484D
-	font-weight: 300
-
-
-
-
-.sing
+#sing
 	background-image: url("../img/sing.jpg")
 	width: 17px
 	height: 19px
@@ -335,22 +162,18 @@ button[class*=btn]
 
 
 .footwear-main-content
-	display: flex
-	justify-content: space-between
-	align-items: flex-end
 	background-color: white
 	padding: 98px 0px 150px
 
-.footwear-image-content
-	background-image: url("../img/footwear.jpg")
-	max-width: 638px
-	width: 100%
-	height: 296px
-	margin-left: 130px
+.footwear-main-content img
+	display: inline-block
+	max-width: 70%
 	background-size: cover
+	padding: 0px 130px 0px 120px
 
 .footwear-product-content
-	margin-right: 165px
+	display: inline-block
+	max-width: 30%
 
 .product-like
 	z-index: 3
@@ -369,12 +192,12 @@ button[class*=btn]
 
 .product-price
 	font-size: 18px
-	margin-bottom: 19px
+	margin-bottom: 18px
 
 .product-colors
 	font-size: 14px
 	text-transform: uppercase
-	margin-bottom: 12px
+	margin-bottom: 10px
 
 span
   color: #0089cf
@@ -403,10 +226,15 @@ span
 .product-size-charts
 	display: flex
 
-#product-size-selection
+.nice-select
 	width: 125px
 	height: 50px
-	outline: none
+	line-height: 50px
+	text-transform: uppercase
+	border-radius: 0px
+
+.nice-select .option
+	min-height: 0px
 
 
 .product-cart
@@ -425,8 +253,13 @@ span
 //
 // DESCRIPTION
 //
+.description
+	height: 100vh
 
 .description-content
+	display: flex
+	align-items: center
+	padding: 50px 50px 0px 50px
 	background-image: url("../img/desc.jpg")
 	width: 100%
 	max-width: 1280px
@@ -435,7 +268,7 @@ span
 	background-position: center
 
 .description-information-content
-	padding: 258px 860px 0px 52px
+	max-width: 368px
 
 .description-information-title
 	font-size: 25px
@@ -459,6 +292,7 @@ span
 
 .product-story-description-content
 	display: flex
+	justify-content: space-between
 	background-image: url("../img/pair shoes.png")
 	width: 100%
 	max-width: 1280px
@@ -467,7 +301,8 @@ span
 	background-position: center
 
 .product-story-content
-	padding: 106px 0px 0px 51px
+	max-width: 350px
+	padding: 120px 0px 0px 50px
 
 .story-content
 	margin-bottom: 40px
@@ -486,9 +321,9 @@ span
 .product-story-text-content
 	font-family: "RobotoLight"
 	font-size: 14px
-	padding-right: 531px
 	color: #b2b2b2
 	line-height: 1.8
+
 
 .product-benefits-content
 	font-size: 14px
@@ -510,10 +345,10 @@ span
 
 .product-description-content
 	background-color: #fff
-	width: 580px
+	width: 300px
 	height: 430px
 	border: 3px solid #e4e4e4
-	margin: 115px 50px 0px 0px
+	margin: 115px 49px 0px 0px
 
 .product-description-name-nike
 	font-size: 25px
@@ -560,11 +395,6 @@ span
 	justify-content: space-between
 	padding-left: 25px
 
-.product-description-selection
-	width: 115px
-	height: 50px
-	outline: none
-
 .product-description-cart
 	width: 115px
 	height: 50px
@@ -606,7 +436,7 @@ span
 	display: flex
 	flex-wrap: wrap
 	justify-content: space-around
-	margin-left: 35px
+	margin: 0px 35px
 
 .image-container
   width: 25%
@@ -634,44 +464,471 @@ span
 
 .image-container .models-image
 	width: 100%
-	height: 280px
 	padding-top: 100%
 	background-size: cover
+
+	//NAVIGATION-MENU-CONTAINER//
+
+#navigation-menu-container
+	display: none
+
+#navigation-menu-container.visible
+	display: block
+
+ul.navigation-menu
+	margin-left: 0
+	padding-left: 0
+
+ul.navigation-menu a
+	display: block
+	width: 7em
+	padding: 10px
+	font-size: 14px
+	background-color: #f4f4f4
+	border-top: 1px dashed #333
+	text-transform: uppercase
+	text-decoration: none
+	border-left: 5px solid #2299d5
+	color: #000
+	border-right: 1px dashed #333
+
+
+ul.navigation-menu li
+	padding-left: 20px
+
+.navigation-menu a:hover
+  color: #2299d5
+
+.navigation-menu a:hover::after
+
+
+	//SEARCH-ON//
+
+.search-on-title-content
+	display: flex
+	justify-content: space-between
+	margin-bottom: 50px
+
+.search-title
+	font-size: 18px
+	text-transform: uppercase
+
+.start
+	font-size: 14px
+	text-transform: none
+	color: #919394
+
+.search-close-button
+	background-image: url("../img/close.png")
+	width: 17px
+	height: 17px
+	cursor: pointer
+
+.search-on-button
+	position: relative
+	width: 1280px
+	border-bottom: 1px solid #e4e4e4
+	min-height: 20px
+
+.search-on-button input
+	font-size: 60px
+	color: #3da4d8
+
+input[type="text"]
+	border: none
+	outline: none
+	max-width: 1280px
+	width: 100%
+	vertical-align: middle
+
+input[type="search"]
+	position: absolute
+	right: 0px
+	bottom: 20px
+	width: 32px
+	height: 32px
+	border: none
+	background: url("../img/search-icon.png")
+	background-repeat: no-repeat
+	outline: none
+
+	//INFORMATION//
+
+.information
+	width: 100%
+	max-width: 560px
+	float: right
+
+.information-content
+	padding: 35px 0 0 40px
+
+.information-title
+	font-size: 35px
+	text-transform: uppercase
+	margin-bottom: 30px
+
+.personnal
+	font-size: 14px
+	text-transform: uppercase
+
+#country
+	font-size: 14px
+	border: none
+	border-bottom: 1px solid #e4e4e4
+	outline: none
+	width: 100%
+	max-width: 230px
+	padding: 14px 0px
+
+.information-content input
+	border: none
+	outline: none
+	border-bottom: 1px solid #e4e4e4
+	font-size: 14px
+	padding: 14px 0px
+	margin: 0px 25px 12px 0px
+	width: 100%
+	max-width: 230px
+
+input[type="adress"]
+	max-width: 485px
+
+.note
+	font-size: 14px
+	text-transform: uppercase
+
+input[type="note"]
+	max-width: 485px
+	margin-bottom: 40px
+
+.delivery
+	font-size: 14px
+	text-transform: uppercase
+
+.delivers-mode
+	outline: none
+	border: none
+	border-bottom: 1px solid #e4e4e4
+	width: 100%
+	max-width: 230px
+	padding: 14px 0px
+
+.your-item-container
+	display: flex
+	width: 480px
+	height: 120px
+	margin: 20px auto
+	border-bottom: 1px solid #d9e0e3
+
+.your-cart-content
+	background-color: #f2f9fd
+
+.your-cart-title
+	font-size: 14px
+	text-transform: uppercase
+	border-bottom: 1px solid #d9e0e3
+	width: 480px
+	margin: 20px auto
+	padding: 14px 0px
+
+
+.image-cart
+	margin: 15px 20px 0px -160px
+
+.image-cart img
+	width: 55px
+	height: 31px
+
+.description-produck-cart
+	max-width: 175px
+	width: 100%
+	margin: 15px 20px 0px 0px
+
+.footwear-brand
+	display: block
+	font-size: 18px
+	text-transform: uppercase
+	color: black
+
+.footwer-brand-description
+	font-size: 14px
+	font-family: "RobotoLight"
+	color: #8b8d8e
+
+.quantity-cart
+	border: none
+
+.quantity-cart input
+	font-size: 14px
+	background-color: #f2f9fd
+
+button[class*=btn]
+  border: none
+  cursor: pointer
+
+.plus-btn
+	background-image: url("../img/plus.png")
+	background-color: #f2f9fd
+	width: 10px
+	height: 10px
+	background-repeat: no-repeat
+	outline: none
+
+.minus-btn
+	background-image: url("../img/minus.png")
+	width: 10px
+	height: 2px
+	background-repeat: no-repeat
+	outline: none
+
+.footwear-size-title
+	font-size: 14px
+	text-transform: uppercase
+	margin: 25px 20px 0px 0px
+
+.footwear-size
+	width: 30px
+	height: 30px
+	background-color: #d9e0e3
+	text-align: center
+	line-height: 30px
+	margin: 15px 20px 0px 0px
+
+.total-price
+	margin-top: 20px
+
+.last-informations
+	display: flex
+
+.consent-block
+	width: 14px
+	height: 14px
+	border: 1px solid #e5e5e5
+	margin-right: 12px
+
+.consent-container
+	display: flex
+	align-items: center
+	width: 60%
+	padding-left: 40px
+
+.total-button-container
+	width: 40%
+
+.consent
+	font-size: 14px
+	font-family: "RobotoLight"
+	color: #4c4d4e
+
+.shipping-container, .subtotal-container
+	display: flex
+	width: 180px
+	justify-content: space-between
+	margin-bottom: 30px
+
+.shipping-title, .subtotal-title, .shipping-price, .subtotal-price
+	font-size: 14px
+	text-transform: uppercase
+	color: #4c4d4e
+
+.submit
+	width: 180px
+	height: 50px
+	font-size: 14px
+	text-transform: uppercase
+	background-color: #333
+	color: #fff
+	border: 0
+
+	//SING-IN//
+
+#slick-login
+	width: 220px
+	height: 155px
+	position: absolute
+	left: 50%
+	top: 50%
+	margin-left: -50px
+	margin-top: -75px
+
+#slick-login label
+	display: none
+
+#slick-login input[type="text"],#slick-login input[type="password"]
+	width: 100%
+	height: 40px
+	margin-top: 7px
+	font-size: 14px
+	color: #444
+	outline: none
+	border: 1px solid rgba(0, 0, 0, .49)
+	text-align: center
+
+#slick-login input[type="text"]:focus,#slick-login input[type="password"]:focus
+	box-shadow: inset 0px 2px 0px #a7a7a7
+
+#slick-login input:first-child
+	margin-top: 0px
+
+#slick-login input[type="submit"]
+	width: 100%
+	height: 50px
+	margin-top: 7px
+	color: #fff
+	font-size: 18px
+	outline: none
+	border: 1px solid rgba(0, 0, 0, .49)
+
+
+
 
 
 @media screen and (max-width:1300px)
 	.product-description-content
-		margin: 115px 0px 0 0
+		opacity: 0.8
 
 @media screen and (max-width:1150px)
-	.description-information-content
-		padding: 258px 600px 0 52px
+	.footwear-main-content img
+		position: relative
+		width: 100%
+		max-width: 100%
+
+	.footwear-product-content
+		display: flex
+		flex-direction: column
+		align-items: flex-end
+		max-width: 100%
+		margin-right: 30px
+
+	.product-like, .product-name, .product-price, .product-colors
+		position: absolute
+		margin-bottom: 0px
+
+	.product-like
+		top: 100px
+		right: 245px
+
+	.product-name
+		top: 100px
+		right: 25px
+
+	.product-price
+		top: 190px
+		right: 30px
+
+	.product-colors
+		top: 170px
+		right: 20px
+
+	.product-color-selection-image
+		top: 200px
+		right: 20px
+
+	.product-size
+		right: 25px
+		bottom: 300px
+
+	.product-size-charts
+		right: 25px
+		bottom: 240px
 
 @media screen and (max-width:992px)
-	.description-information-content
-		padding: 258px 450px 0 52px
+
+	.footwear-main-content img
+		padding: 0px 60px 0px 60px
+
+	.menu
+		display: none
+
+	#search, #shopping-cart-button, #sing
+		font-size: 0px
+		padding: 0px 35px 0px 10px
+
+@media screen and (max-width:768px)
+
+	.product-like
+		right: 215px
+
+	.product-name-nike
+		font-size: 20px
+
+	.product-name-air
+		font-size: 30px
+
+	.product-price
+		font-size: 16px
+
+	.product-colors
+		font-size: 12px
 
 	.image-container
 		width: 50%
 
-@media screen and (max-width:768px)
-	.description-information-content
-		padding: 258px 300px 0 52px
+@media screen and (max-width:600px)
+
+	.footwear-main-content img
+		padding: 0 60px 60px 60px
+
+	.footwear-product-content
+		align-items: center
+		margin-right: 0px
+
+	.product-name, .product-price, .product-colors
+		position: static
+
+	.product-like
+		right: 25px
+
+	.product-name
+		margin-bottom: 12px
+
+	.product-name-nike
+		display: inline-block
+		font-size: 30px
+
+	.product-name-air
+		display: inline-block
+
+	.product-price
+		font-size: 18px
+		margin-bottom: 12px
+
+	.product-colors
+		font-size: 14px
+		margin-bottom: 12px
+
+	.product-size-charts
+		flex-direction: column
+
+	.nice-select, .product-cart
+		width: 175px
+
+	.nice-select
+		margin-bottom: 12px
+
+	.product-cart
+		margin-left: 0px
+
+
+
+
+
+
+
+@media screen and (max-width:411px)
+
+	.product-story-content
+		padding: 120px 30px 0px 30px
+
+	.product-description-content
+		margin-left: 0px
+	.description-content
+		padding: 50px 20px 0px 20px
 
 	.image-container
 		width: 100%
 
-@media screen and (max-width:600px)
-	.description-information-content
-		padding: 258px 100px 0 100px
-
-@media screen and (max-width: 411px)
-	.description-information-content
-		padding: 258px 10px 0 80px
-
 @media screen and (max-width:320px)
-	.description-information-content
-		padding: 258px 10px 0 70px
 
 
 
