--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -69,7 +69,7 @@ body
 	display: flex
 	justify-content: space-between
 	background-color: white
-	padding: 20px 0px 20px 0px
+	padding: 0px 20px
 
 .navigation-content-left
 	display: flex
@@ -79,9 +79,6 @@ body
   background-image: url("../img/label.png")
   width: 50px
   height: 50px
-
-.label
-	margin-left: 20px
 
 .label
 	cursor: pointer
@@ -152,6 +149,14 @@ li:nth-child(5)
 	background-repeat: no-repeat
 	text-transform: uppercase
 	padding: 0px 64px 0px 24px
+	cursor: pointer
+
+#menu-button
+	display: none
+	background-image: url("../img/menu.png")
+	background-repeat: no-repeat
+	width: 20px
+	height: 20px
 	cursor: pointer
 
 
@@ -474,10 +479,15 @@ span
 
 #navigation-menu-container.visible
 	display: block
+	top: 40px
+	position: fixed
+
+#navigation-close
+	display: block
 
 ul.navigation-menu
 	margin-left: 0
-	padding-left: 0
+	padding-left: 0px
 
 ul.navigation-menu a
 	display: block
@@ -494,7 +504,7 @@ ul.navigation-menu a
 
 
 ul.navigation-menu li
-	padding-left: 20px
+	padding-left: 0px
 
 .navigation-menu a:hover
   color: #2299d5
@@ -503,6 +513,16 @@ ul.navigation-menu li
 
 
 	//SEARCH-ON//
+#search-on
+	display: none
+	position: fixed
+	top: 200px
+	z-index: 5
+	background-color: #e6edf1
+	width: 100%
+
+#search-on.visible
+	display: block
 
 .search-on-title-content
 	display: flex
@@ -518,7 +538,7 @@ ul.navigation-menu li
 	text-transform: none
 	color: #919394
 
-.search-close-button
+#search-close-button
 	background-image: url("../img/close.png")
 	width: 17px
 	height: 17px
@@ -526,7 +546,8 @@ ul.navigation-menu li
 
 .search-on-button
 	position: relative
-	width: 1280px
+	max-width: 1280px
+	width: 100%
 	border-bottom: 1px solid #e4e4e4
 	min-height: 20px
 
@@ -554,10 +575,21 @@ input[type="search"]
 
 	//INFORMATION//
 
-.information
+#information
+	display: none
+	position: fixed
+	top: 0px
+	right: 0px
+	height: 100%
 	width: 100%
 	max-width: 560px
 	float: right
+	background-color: #fff
+	overflow: scroll
+	z-index: 12
+
+#information.visible
+	display: block
 
 .information-content
 	padding: 35px 0 0 40px
@@ -615,7 +647,8 @@ input[type="note"]
 
 .your-item-container
 	display: flex
-	width: 480px
+	max-width: 480px
+	width: 100%
 	height: 120px
 	margin: 20px auto
 	border-bottom: 1px solid #d9e0e3
@@ -627,13 +660,14 @@ input[type="note"]
 	font-size: 14px
 	text-transform: uppercase
 	border-bottom: 1px solid #d9e0e3
-	width: 480px
+	max-width: 480px
+	width: 100%
 	margin: 20px auto
 	padding: 14px 0px
 
 
 .image-cart
-	margin: 15px 20px 0px -160px
+	margin: 15px 20px 0px 0px
 
 .image-cart img
 	width: 55px
@@ -665,6 +699,11 @@ input[type="note"]
 button[class*=btn]
   border: none
   cursor: pointer
+
+.quantity-cart
+	width: 12px
+	height: 0px
+	margin-right: 20px
 
 .plus-btn
 	background-image: url("../img/plus.png")
@@ -740,7 +779,30 @@ button[class*=btn]
 	color: #fff
 	border: 0
 
+#information-close
+	position: absolute
+	top: 20px
+	right: 20px
+	display: inline-block
+	background-image: url("../img/close.png")
+	background-repeat: no-repeat
+	cursor: pointer
+	width: 17px
+	height: 17px
+
 	//SING-IN//
+#sing-in
+	display: none
+	position: fixed
+	height: 100%
+	width: 100%
+	top: 0px
+	left: 0px
+	z-index: 10
+	background-color: #ddd
+
+#sing-in.visible
+	display: block
 
 #slick-login
 	width: 220px
@@ -748,8 +810,8 @@ button[class*=btn]
 	position: absolute
 	left: 50%
 	top: 50%
-	margin-left: -50px
-	margin-top: -75px
+	margin-left: -100px
+	margin-top: -100px
 
 #slick-login label
 	display: none
@@ -779,13 +841,22 @@ button[class*=btn]
 	outline: none
 	border: 1px solid rgba(0, 0, 0, .49)
 
-
-
+#sing-in-close
+	position: absolute
+	top: 20px
+	right: 20px
+	display: inline-block
+	background-image: url("../img/close.png")
+	background-repeat: no-repeat
+	cursor: pointer
+	width: 17px
+	height: 17px
 
 
 @media screen and (max-width:1300px)
-	.product-description-content
-		opacity: 0.8
+	.product-story-description-content
+		flex-direction: column
+		height: auto
 
 @media screen and (max-width:1150px)
 	.footwear-main-content img
@@ -798,7 +869,7 @@ button[class*=btn]
 		flex-direction: column
 		align-items: flex-end
 		max-width: 100%
-		margin-right: 30px
+		padding: 30px 30px 0px 0px
 
 	.product-like, .product-name, .product-price, .product-colors
 		position: absolute
@@ -813,11 +884,11 @@ button[class*=btn]
 		right: 25px
 
 	.product-price
-		top: 190px
+		top: 200px
 		right: 30px
 
 	.product-colors
-		top: 170px
+		top: 175px
 		right: 20px
 
 	.product-color-selection-image
@@ -834,6 +905,9 @@ button[class*=btn]
 
 @media screen and (max-width:992px)
 
+	#menu-button
+		display: block
+
 	.footwear-main-content img
 		padding: 0px 60px 0px 60px
 
@@ -843,6 +917,9 @@ button[class*=btn]
 	#search, #shopping-cart-button, #sing
 		font-size: 0px
 		padding: 0px 35px 0px 10px
+
+	#information
+		max-width: 100%
 
 @media screen and (max-width:768px)
 
@@ -861,10 +938,35 @@ button[class*=btn]
 	.product-colors
 		font-size: 12px
 
+	.product-story-description-content
+		background-image: url("../img/pair shoes.png")
+		background-image: none
+
+	.product-story-description-content
+		align-items: center
+
+	.product-story-content
+		padding: 50px 30px
+
+	.product-description-content
+		margin: 0px
+
 	.image-container
 		width: 50%
 
+	.search-on-button input
+		font-size: 50px
+
 @media screen and (max-width:600px)
+
+	.footwear-main-content
+		padding: 98px 0px 100px
+
+	.description
+		height: 79vh
+
+	.footwear-social-content
+		padding: 76px 0px 100px
 
 	.footwear-main-content img
 		padding: 0 60px 60px 60px
@@ -872,6 +974,7 @@ button[class*=btn]
 	.footwear-product-content
 		align-items: center
 		margin-right: 0px
+		padding: 0px
 
 	.product-name, .product-price, .product-colors
 		position: static
@@ -909,29 +1012,47 @@ button[class*=btn]
 	.product-cart
 		margin-left: 0px
 
+	.description-content
+		padding: 50px
 
+	input[type=adress], input[type=note]
+		max-width: 230px
 
+	.your-cart-title, .your-item-container
+		margin: 20px
+		width: 90%
+		max-width: 100%
 
+	.footwear-brand
+		font-size: 14px
+
+	.footwer-brand-description
+		font-size: 12px
+
+	.consent-container
+		width: 50%
+
+	.search-on-button input
+		font-size: 40px
 
 
 
 @media screen and (max-width:411px)
-
-	.product-story-content
-		padding: 120px 30px 0px 30px
-
 	.product-description-content
 		margin-left: 0px
 	.description-content
-		padding: 50px 20px 0px 20px
+		padding: 50px 20px
 
 	.image-container
 		width: 100%
 
+	.search-on-button input
+		font-size: 30px
+
+
 @media screen and (max-width:320px)
 
-
-
-
+	.search-on-button input
+		font-size: 20px
 
 @import "media"
