--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -177,7 +177,7 @@ li:nth-child(5)
 	background-size: cover
 	padding: 0px 130px 0px 120px
 
-	
+
 .footwear-product-content
 	display: inline-block
 	max-width: 30%
@@ -248,8 +248,11 @@ span
 	text-transform: uppercase
 	border-radius: 0px
 
-.product-size-charts .nice-select .option
+.product-size-charts .nice-select .option, .product-description-charts .nice-select .option
 	min-height: 0px
+
+.nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus
+	min-height: 0
 
 
 .product-cart
@@ -280,6 +283,7 @@ span
 	height: 100vh
 	background-size: cover
 	background-position: center
+	min-height: 400px
 
 .description-information-content
 	max-width: 368px
@@ -301,7 +305,7 @@ span
 // PRODUCT-DESCRIPtION
 //
 
-.product-description
+#product-description
 	background-image: url("../img/pair shoes.png")
 	background-color: #f5f5f5
 	width: 100%
@@ -711,6 +715,9 @@ input[type="search"]
 	padding: 0px 0px
 	text-transform: uppercase
 
+.information-content .nice-select span
+	color: #000
+
 .information-content input
 	border: none
 	outline: none
@@ -966,6 +973,7 @@ button[class*=btn]
 
 
 @media screen and (max-width:1280px)
+
 	.menu a:hover
 		color: #000
 
@@ -973,6 +981,9 @@ button[class*=btn]
 		display: none
 		content: ""
 		border-bottom: 5px solid
+
+	.navigation-content
+		padding: 0px 20px 0px 0px
 
 @media screen and (max-width:1150px)
 
@@ -1042,14 +1053,9 @@ button[class*=btn]
 		font-size: 0px
 		padding: 0px 35px 0px 10px
 
-	#information
-		max-width: 100%
-
 	.footwear-model
 		width: 50%
 
-	.navigation-content
-		padding: 0px 20px 0px 0px
 
 	.footwear-model-information
 		top: 0px
@@ -1072,6 +1078,9 @@ button[class*=btn]
 
 
 @media screen and (max-width:768px)
+
+	#information
+		max-width: 100%
 
 	.product-like
 		top: 60px
@@ -1125,7 +1134,15 @@ button[class*=btn]
 	.footwear-social-content
 		padding: 60px 0px 100px
 
+	.information-content input, .information-content .nice-select
+		max-width: 100%
+
+	.information-content
+		padding: 25px
+
 @media screen and (max-width:600px)
+
+
 
 	.footwear-main-content
 		padding: 98px 0px 100px
@@ -1183,8 +1200,6 @@ button[class*=btn]
 	.description-content
 		padding: 50px
 
-	input[type=adress], input[type=note]
-		max-width: 230px
 
 	.your-cart-title, .your-item-container
 		margin: 20px
@@ -1243,7 +1258,7 @@ button[class*=btn]
 		width: 100%
 
 	.description-produck-cart
-		margin: 5px 20px 0px 0px
+		margin: 5px 10px 0px 0px
 
 
 
